tests/NormalTests/paczka2/big_fuzzy/18752261.err
Error in line 8: BgeNK7AFiMM A737 23,3
Error in line 7: Wqf0sMOHAfE S510 3,5
Error in line 12: mAZ6 A394 94,2
Error in line 6: TikehSqj A737 82,9
Error in line 15: TikehSqj A536 58,3
Error in line 27: Wqf0sMOHAfE A536 99,1
Error in line 37: BgeNK7AFiMM S510 32,26
Error in line 38: 7Q1Cl A536 -1,0
Error in line 32: BgeNK7AFiMM S510 33,6
Error in line 41: A737 A394 85,6
Error in line 25: cHWWLRdz A394 13,5
Error in line 31: 7Q1Cl A536 20,7
Error in line 64: mAZ6 S510 96,6
Error in line 67: mAZ6 A737 19,8
Error in line 66: BgeNK7AFiMM A394 9,0
Error in line 78: BgeNK7AFiMM A737 34,0
Error in line 102: Wqf0sMOHAfE A737 -1,6
Error in line 98: A737 A394 89,2
Error in line 91: cHWWLRdz A394 46,6
Error in line 111: A737 A737 49,6
Error in line 120: cHWWLRdz A737 97,9
Error in line 124: cHWWLRdz A394 14,4
Error in line 126: cHWWLRdz A536 91,4
Error in line 123: BgeNK7AFiMM A394 88,6
Error in line 119: A737 A394 94,1
Error in line 135: Wqf0sMOHAfE A536 82,5
Error in line 141: BgeNK7AFiMM S510 57,8
Error in line 150: A737 S510 113,7
Error in line 160: mAZ6 S510 46,8
Error in line 149: Wqf0sMOHAfE A737 264,3
Error in line 164: cHWWLRdz A536 27,8
Error in line 170: cHWWLRdz A737 78,3
Error in line 185: cHWWLRdz A737 15,5
Error in line 187: cHWWLRdz A536 63,1
Error in line 194: 7Q1Cl A737 344,4
Error in line 183: BgeNK7AFiMM A737 4,8
Error in line 198: cHWWLRdz A737 55,5
Error in line 199: A737 A536 74,1
Error in line 226: Wqf0sMOHAfE A737 81,0
Error in line 232: Wqf0sMOHAfE A394 180,3
Error in line 233: Wqf0sMOHAfE A536 65,5
Error in line 243: A737 A536 41,04
